test/param/promoted.runParam.good
promoted.chpl:16: error: unresolved call 'paramFun(range(int(64),bounded,false))'
promoted.chpl:9: note: candidates are: paramFun(arg: int)
